# verifiable-git-infrastructure

./: Cargo.toml  README.md
.github/actions/verify-trust/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml  verify-trust.yml
crates/did-git-sign/: Cargo.toml  README.md
crates/did-git-sign/src/: main.rs  sign.rs
crates/verify-trust/: Cargo.toml  README.md
crates/verify-trust/src/: lib.rs  main.rs  pgp_exempt.rs
crates/verify-trust/tests/: verify_trust_e2e.rs
crates/vgi-core/: Cargo.toml  README.md
crates/vgi-core/src/: commit.rs  did.rs  lib.rs  sshsig.rs
