[package]
name = "did-git-sign"
description = "Git commit signing proxy using DID Ed25519 keys via VTA"
readme = "README.md"
keywords = ["git", "did", "ssh", "commit-signing", "vta"]
categories = ["command-line-utilities", "cryptography"]
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "did_git_sign"
path = "src/lib.rs"

[[bin]]
name = "did-git-sign"
path = "src/main.rs"

[dependencies]
# Shared sshsig codec (create_ssh_signature) — kept in lockstep with the verifier.
vgi-core = { workspace = true }
vta-sdk = { workspace = true, features = ["client", "session"] }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
keyring-core = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
multibase = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dialoguer = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

# Per-platform keyring-core stores. did-git-sign uses the same backend as
# openvtc on each platform so credentials line up.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
rand = { workspace = true }
